sources += files(
    'Application.vala',
    'Canvas.vala',
    'CanvasImage.vala',
    'CanvasItem.vala',
    'CanvasItemProperties.vala',
    'CanvasItems.vala',
    'CanvasPoint.vala',
    'CanvasRect.vala',
    'CanvasToolbar.vala',
    'ColorPicker.vala',
    'Clipboard.vala',
    'Editor.vala',
    'FormatBar.vala',
    'Exporter.vala',
    'FormattedText.vala',
    'MainWindow.vala',
    'UndoBuffer.vala',
    'UndoItem.vala',
    'UndoTextBuffer.vala',
    'UndoTextItem.vala',
    'Utils.vala',
)

subdir('canvas_items')
subdir('undo_actions')
