sources += files(
    'Application.vala',
    'Canvas.vala',
    'CanvasImage.vala',
    'CanvasImageInfo.vala',
    'CanvasItem.vala',
    'CanvasItemProperties.vala',
    'CanvasItems.vala',
    'CanvasPoint.vala',
    'CanvasRect.vala',
    'CanvasToolbar.vala',
    'Clipboard.vala',
    'ColorPicker.vala',
    'CurrentItem.vala',
    'CustomItem.vala',
    'CustomItems.vala',
    'Editor.vala',
    'Export.vala',
    'Exports.vala',
    'Exporter.vala',
    'FormatBar.vala',
    'FormattedText.vala',
    'MainWindow.vala',
    'Resizer.vala',
    'ScreenshotBackend.vala',
    'ScreenshotProxy.vala',
    'UndoBuffer.vala',
    'UndoItem.vala',
    'UndoTextBuffer.vala',
    'UndoTextItem.vala',
    'Utils.vala',
    'ZoomWidget.vala'
)

subdir('canvas_items')
subdir('exports')
subdir('undo_actions')
