sources += files(

    'CanvasItemArrow.vala',
    'CanvasItemBlur.vala',
    'CanvasItemImage.vala',
    'CanvasItemLine.vala',
    'CanvasItemMagnifier.vala',
    'CanvasItemOval.vala',
    'CanvasItemPencil.vala',
    'CanvasItemRect.vala',
    'CanvasItemSequence.vala',
    'CanvasItemStar.vala',
    'CanvasItemText.vala',

)
