sources += files(

    'CanvasItemArrow.vala',
    'CanvasItemBlur.vala',
    'CanvasItemBubble.vala',
    'CanvasItemImage.vala',
    'CanvasItemLine.vala',
    'CanvasItemMagnifier.vala',
    'CanvasItemOval.vala',
    'CanvasItemPencil.vala',
    'CanvasItemRect.vala',
    'CanvasItemSequence.vala',
    'CanvasItemStar.vala',
    'CanvasItemText.vala',

)
