sources += files(

    'UndoImageChange.vala',
    'UndoImageResize.vala',

    'UndoItemAdd.vala',
    'UndoItemBoxChange.vala',
    'UndoItemDelete.vala',
    'UndoItemMagnifierFocus.vala',
    'UndoItemMagnifierZoom.vala',
    'UndoItemPaste.vala',
    'UndoItemPropChange.vala',
    'UndoItemSendBack.vala',
    'UndoItemSendFront.vala',
    'UndoItemSequenceNum.vala',
    'UndoItemTextResize.vala',

    'UndoTextClearTags.vala',
    'UndoTextCommit.vala',
    'UndoTextDelete.vala',
    'UndoTextInsert.vala',
    'UndoTextMultiInsert.vala',
    'UndoTextReplace.vala',
    'UndoTextTagAdd.vala',
    'UndoTextTagRemove.vala',

)
